[package]
name = "mongodb-warp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["macros", "rt-threaded"] }
warp = "0.3.6"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "2.7.1"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'